--- a/index.html
+++ b/index.html
@@ -7,23 +7,54 @@
 </head>
 <body>
     <!-- Header -->
-    <a href="">
-        <span>WEB</span><span>STUDIO</span>
-    </a>
-    <ul>
-        <li>
-            <a href="">Studio</a>
-        </li>
-        <li><a href="">Portfolio</a>
-        </li>
-        <li><a href="">Contacts</a>
-        </li>
-    </ul> 
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    <header>
+        <nav>
+            <!-- Logo -->
+            <a href=""><span>WEB</span><span>STUDIO</span></a>
+            <!-- List in the header -->
+                    <ul>
+                        <li><a href="">Studio</a></li>
+                        <li><a href="">Portfolio</a></li>
+                        <li><a href="">Contacts</a></li>
+                 </ul> 
+        </nav>
+        <!-- Phone & mail -->
+     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </header>
     <!-- Section hero -->
+    <section>
+        <h1>Effective Solutions <br/>
+        for Your Business
+        </h1>
+        <button type="button">Order Service</button>
+    </section>
     <!-- Section 1 (Our Values)-->
+    <section>
+        <ul>
+            <li><h3>Strategy</h3>
+                <p>Our goal is to identify the business
+                problem to walk away with the perfect and creative solution.
+                </p>
+            </li>
+            <li>
+                <h3>Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li>
+                <h3>Diligence</h3>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+                <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+    </section>
     <!-- Sectin 2 (Our Team) -->
+    <section>
+        <h2>Our Team</h2>
+    </section>
     <!-- Footer -->
 </body>
 </html>
