--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </section>
     <!-- Section 1 (Our Values)-->
     <section>
+        <h2>Our Values</h2>
         <ul>
             <li><h3>Strategy</h3>
                 <p>Our goal is to identify the business
@@ -54,7 +55,30 @@
     <!-- Sectin 2 (Our Team) -->
     <section>
         <h2>Our Team</h2>
+        <ul>
+            <li>
+                <img src="./images/Mark Guerrero.jpg" alt="Mark Guerrero<" width="264"/>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/Tom Ford.jpg" alt="Tom Ford" width="264"/>
+                <h3>Tom Ford</h3>
+                <p3>Frontend Developer</p3>
+            </li>
+            <li>
+                <img src="./images/Camila Garcia.jpg" alt="Camila Garcia" width="264"/>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p> 
+            </li>
+            <li>
+                <img src="./images/Daniel Wilson.jpg" alt="Daniel Wilson" width="264" />
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>         
+
+        </ul>
     </section>
     <!-- Footer -->
-</body>
+  </body>
 </html>
