--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
         </ul>
     </section>
     <!-- Footer -->
+    <footer>
+        <a href=""><span>WEB</span><span>STUDIO</span></a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>  
+    </footer>
   </body>
 </html>
