--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -12,11 +14,11 @@
             <!-- Logo -->
             <a href=""><span>WEB</span><span>STUDIO</span></a>
             <!-- List in the header -->
-                    <ul>
-                        <li><a href="">Studio</a></li>
-                        <li><a href="">Portfolio</a></li>
-                        <li><a href="">Contacts</a></li>
-                 </ul> 
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
         </nav>
         <!-- Phone & mail -->
         <ul>
@@ -24,7 +26,7 @@
             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
-<main>
+    <main>
         <!-- Section hero -->
         <section>
             <h1>Effective Solutions <br>
@@ -44,16 +46,19 @@
                 </li>
                 <li>
                     <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.
                     </p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -81,14 +86,15 @@
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
-        
+
             </ul>
         </section>
-</main>
+    </main>
     <!-- Footer -->
     <footer>
         <a href=""><span>WEB</span><span>STUDIO</span></a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>  
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
-  </body>
+</body>
+
 </html>
