--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <!-- Logo -->
-            <a href=""><span>WEB</span><span>STUDIO</span></a>
+            <a href="./index.html">WEBSTUDIO</a>
             <!-- List in the header -->
             <ul>
                 <li><a href="">Studio</a></li>
@@ -22,17 +22,17 @@
             </ul>
         </nav>
         <!-- Phone & mail -->
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
     <main>
         <!-- Section hero -->
         <section>
-            <h1>Effective Solutions <br>
-                for Your Business
-            </h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
         <!-- Section 1 (Our Values)-->
@@ -93,7 +93,7 @@
     </main>
     <!-- Footer -->
     <footer>
-        <a href=""><span>WEB</span><span>STUDIO</span></a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
