--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <!-- Logo -->
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <!-- List in the header -->
             <ul>
                 <li><a href="">Studio</a></li>
@@ -93,9 +93,10 @@
     </main>
     <!-- Footer -->
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
 </html>
+
